# SageParser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
docs/: Design.puml  Library_Design.puml  Ui_Design.puml  architecture.puml
lib/: AbstractProcessor.hpp  CMakeLists.txt  DataProcessorFactory.cpp  DataProcessorFactory.hpp  DataTable.hpp  Dataset.cpp  Dataset.hpp  IDataProcessor.hpp  IOperationBuilder.hpp  IReader.hpp  ITableProcessor.hpp  IWriter.hpp  ParserBuilder.cpp  ParserBuilder.hpp  ReaderFactory.cpp  ReaderFactory.hpp  Table.cpp  Table.hpp  Types.hpp  WriterFactory.cpp  WriterFactory.hpp
lib/DataProcessors/: BesuglayaInvoiceProcessor.cpp  BesuglayaInvoiceProcessor.hpp  OdooExportedProcessor.cpp  OdooExportedProcessor.hpp  OdooProductsProcessor.cpp  OdooProductsProcessor.hpp  OmegaInvoiceProcessor.cpp  OmegaInvoiceProcessor.hpp  OmegaPricelistProcessor.cpp  OmegaPricelistProcessor.hpp  SimpleDataProcessor.cpp  SimpleDataProcessor.hpp  SimpleTableProcessor.cpp  SimpleTableProcessor.hpp  XmlProcessor.cpp  XmlProcessor.hpp
lib/InputProcessors/: DefaultTableProcessor.cpp  DefaultTableProcessor.hpp  OmegaPricelistProcessor.cpp  OmegaPricelistProcessor.hpp
lib/Processors/: DefaultTableProcessor.cpp  DefaultTableProcessor.hpp  IProcessor.hpp  OmegaPricelistProcessor.hpp
lib/Readers/: CsvReader.cpp  CsvReader.hpp  IReader.hpp  XmlReader.cpp  XmlReader.hpp
lib/Writers/: CsvWriter.cpp  CsvWriter.hpp  IWriter.hpp  XmlWriter.cpp  XmlWriter.hpp
lib/parser/: DataProcessorFactory.cpp  IDataProcessor.hpp
lib/reader/: IReader.hpp  ReaderFactory.hpp
lib/writer/: IWriter.hpp  WriterFactory.cpp  WriterFactory.hpp
tests/: CMakeLists.txt  testCsvReaderWriter.cpp  testSageDocsLib.cpp  testXmlReaderWriter.cpp
tests/component/: CMakeLists.txt  CsvParserBuilderTest.cpp  ParserBuilderTest.cpp  SageParserTest.cpp  XmlParserBuilderTest.cpp  testSageParser.cpp
tests/resources/: input_testMinimalCsvWorkCycle.csv
tests/test_resources/: input_testMinimalXmlWorkCycle.xml
tests/unit/: CMakeLists.txt  CsvReaderTest.cpp  CsvWriterTest.cpp  DefaultTableProcessorTest.cpp  XmlReaderTest.cpp  XmlWriterTest.cpp
tests/utils/: Parsing.hpp
ui/: CMakeLists.txt  DocsParserUi.cpp  DocsParserUi.hpp  DynamicInputForm.cpp  DynamicInputForm.hpp  MainWindow.cpp  MainWindow.hpp  ProgressDialog.cpp  ProgressDialog.hpp  SageDocsUi.cpp  SageDocsUi.hpp  TaskManager.cpp  TaskManager.hpp  TaskSelectionWidget.cpp  TaskSelectionWidget.hpp  TaskType.hpp  TaskWorker.cpp  TaskWorker.hpp  main.cpp
ui/Forms/: OdooProductsForm.cpp  OdooProductsForm.hpp  TaskForm.hpp
